# ast_pattern_engine

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ast_pattern_engine/: LICENSE
ast_pattern_engine/.github/workflows/: ci.yml
ast_pattern_engine/src/ast_pattern_engine/: __init__.py  engine.py  plumbing.py  templates.py
ast_pattern_engine/src/ast_pattern_engine/nodes/: basic.py
ast_pattern_engine/tests/: test_engine.py
ast_pattern_engine/tests/patterns/: test_all_of.py  test_bind.py  test_contains.py  test_not.py  test_templates.py
ast_pattern_engine/tests/visitors/: test_pattern_finder.py
examples/: dict_get_rewrite.py
src/ast_pattern_engine/: core.py  engine.py  py.typed  visitors.py
src/ast_pattern_engine/nodes/: basic.py  sequences.py
tests/: test_engine.py
tests/patterns/: test_any_of.py  test_collect.py  test_filter.py  test_one_of.py  test_optional.py  test_pattern_group.py  test_repetition.py
tests/visitors/: test_bottom_up_pattern_transformer.py  test_pattern_finder.py  test_pattern_transformer.py  test_single_occurrence_finder.py
