[project]
name = "ast-pattern-engine"
version = "1.0.1"
description = "A library for regex-inspired fine-grained AST pattern matching and replacing"
readme = "README.md"
authors = [
    { name = "80sVectorz", email = "66908776+80sVectorz@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["ast", "pattern-matching", "refactoring", "codemod", "dsl"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/80sVectorz/ast_pattern_engine"
Repository = "https://github.com/80sVectorz/ast_pattern_engine"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = "error"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
ignore = ["F841"] # Ignore unused variable assignments
